--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,2 @@
 <script src="https://5gvci.com/act/files/tag.min.js?z=10661457" data-cfasync="false" async></script>
+<script src="https://quge5.com/88/tag.min.js" data-zone="214932" async data-cfasync="false"></script>
